# FPGAlayout

./: CMakeLists.txt  README.md  data.txt  design.MAX.out  design.route.out  design.tdm.out  fpga_num2  fpga_num2.cpp  improve.txt  route_checker_beta1127  tmp.txt  verify  verify.cpp
include/: _readdata.h  graphinit.h  parallel_sort.h
source/: design.die.network  design.die.position  design.fpga.die  design.net
src/: _readdata.cpp  graphinit.cpp  main.cpp
